test_case/rust-lang_rust/56511_444185466_23.rs
compile_fail,E0432\nuse something::Foo; // error: unresolved import `something::Foo`.\n